[project]
name = "trie-spellchecker"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Kirill", email = "" }
]
dependencies = [
    "typer==0.9.0"
]
readme = "README.md"
requires-python = ">= 3.11.3"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
[tool.hatch.metadata]
allow-direct-references = true
